Persistence of interpreter state