@@ -39,27 +39,4 @@ subprojects {
         //compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
         compileOnly files("$rootDir/lombok-edge.jar")
     }
-
-    /*lombok { // optional: values below are the defaults
-        //version = "1.16.21" //bleeding edge
-        //sha256 = "c5178b18caaa1a15e17b99ba5e4023d2de2ebc18b58cde0f5a04ca4b31c10e6d"
-    }*/
-
-    compileJava {
-        /*  options.compilerArgs.addAll([
-                  "-Xlint:all,-processing,-cast,-serial,-try",
-                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
-                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-                  "-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
-          ])*/
-    }
 }
